--- a/examples/README.adoc
+++ b/examples/README.adoc
@@ -1,79 +1,86 @@
-# Bicep AST Export Tool Examples
+= Bicep AST Export Tool Examples
 
 This directory contains examples of using the Bicep AST (Abstract Syntax Tree) export tool.
 
-## What is this tool?
+== What is this tool?
 
 The Bicep AST export tool parses a Bicep file and exports its AST to a YAML or JSON file for analysis. The AST represents the structure of the Bicep code in a hierarchical format that's easier to analyze programmatically than the raw text.
 
-## Basic Usage
+== Basic Usage
 
 Export a Bicep file's AST to a YAML file:
 
-```sh
+[source,sh]
+----
 # Build and run the tool
 cargo run --bin export_ast -- path/to/your/file.bicep
-```
+----
 
 The tool will generate a file named `<filename>_tree.yaml` in the current directory.
 
-## Output Formats
+== Output Formats
 
 The tool supports multiple output formats:
 
-- **YAML** (default): `cargo run --bin export_ast -- -f yaml file.bicep`
-- **JSON**: `cargo run --bin export_ast -- -f json file.bicep`
-- **SimpleTree**: `cargo run --bin export_ast -- -f simpletree file.bicep`
+* *YAML* (default): `cargo run --bin export_ast -- -f yaml file.bicep`
+* *JSON*: `cargo run --bin export_ast -- -f json file.bicep`
+* *SimpleTree*: `cargo run --bin export_ast -- -f simpletree file.bicep`
 
-## Common Operations
+== Common Operations
 
-### Show Statistics Only
+=== Show Statistics Only
 
 Just show statistics about the AST without exporting to a file:
 
-```sh
+[source,sh]
+----
 cargo run --bin export_ast -- --stats file.bicep
-```
+----
 
-### Filter by Node Type
+=== Filter by Node Type
 
 Filter the AST to only include nodes of a specific type:
 
-```sh
+[source,sh]
+----
 cargo run --bin export_ast -- --type-filter resource_declaration file.bicep
-```
+----
 
 Common node types include: `resource_declaration`, `parameter_declaration`, `variable_declaration`, `output_declaration`.
 
-### Filter by Line Number
+=== Filter by Line Number
 
 Show only nodes that appear on a specific line:
 
-```sh
+[source,sh]
+----
 cargo run --bin export_ast -- --line 10 file.bicep
-```
+----
 
-### Show Tree Structure
+=== Show Tree Structure
 
 Display a tree structure visualization of the AST:
 
-```sh
+[source,sh]
+----
 cargo run --bin export_ast -- --structure file.bicep
-```
+----
 
-### Filter by Field Name
+=== Filter by Field Name
 
 Filter nodes by a specific field name:
 
-```sh
+[source,sh]
+----
 cargo run --bin export_ast -- --field-filter name file.bicep
-```
+----
 
-### Show Help
+=== Show Help
 
 For more details about the tool usage:
 
-```sh
+[source,sh]
+----
 # General help
 cargo run --bin export_ast -- --help
 
@@ -85,23 +92,23 @@ cargo run --bin export_ast -- --help-node-types
 
 # Show common field names
 cargo run --bin export_ast -- --help-field-names
-```
+----
 
-## Example Files
+== Example Files
 
 The `single-file` directory contains:
 
-- `example.bicep` - An example Bicep file
-- `example_tree.yaml` - The exported AST in YAML format
+* `example.bicep` - An example Bicep file
+* `example_tree.yaml` - The exported AST in YAML format
 
-## Analyzing the Output
+== Analyzing the Output
 
 When viewing the AST, each node has:
 
-- `kind` - The type of node in the tree-sitter grammar
-- `field_name` - The field in the parent grammar rule (if any)
-- `named` - Whether this is a named node in the grammar
-- `text` - The actual text content of this node
-- `children` - Child nodes
+* `kind` - The type of node in the tree-sitter grammar
+* `field_name` - The field in the parent grammar rule (if any)
+* `named` - Whether this is a named node in the grammar
+* `text` - The actual text content of this node
+* `children` - Child nodes
 
 This structure makes it easy to understand the relationships between different parts of your Bicep code.
