feat: Update AsciiDoc output

--- a/examples/single-file/output.adoc
+++ b/examples/single-file/output.adoc
@@ -1,15 +1,23 @@
 = Example Bicep File
+:noheader:
+:source-language: bicep
+:table-caption!:
+:toc: preamble
+:toclevels: 2
 
 Description of the example Bicep file
 
-Target Scope: resourceGroup
-
-=== Additional Metadata
-
+[%autowidth,cols="h,1",frame=none]
 |===
-| Key | Value
+| Target Scope
+| resourceGroup
+|===
 
-| author | File Author
+.Additional Metadata
+[%autowidth,cols="h,1",frame=none]
+|===
+| author
+| File Author
 |===
 
 == Imports
@@ -18,378 +26,845 @@ _No imports defined_
 
 == Types
 
-=== customObject
+=== `customObject`
 
 Type description
 
+.Properties
+[%autowidth,cols="h,1",frame=none]
 |===
-| Property | Value
+| Type
+m| object
 
-| Type | object
-| Exported | No
-| Secure | No
-|===
+| Exported
+| ❌ No
 
-==== Object properties
+| Nullable
+| ❌ No
 
-===== name
+| Secure
+| ❌ No
 
-|===
-| Property | Value
-
-| Type | string
-| Nullable | Yes
-| Secure | Yes
 |===
 
-===== score
+*Object Definition*
+
+==== `name`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| string
+
+| Nullable
+| ✅ Yes
+
+| Secure
+| ✅ Yes
 
 |===
-| Property | Value
 
-| Type | int
-| Minimum Value | 0
-| Maximum Value | 100
+==== `score`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| int
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
+
 |===
 
-===== grade
+.Constraints
+[%autowidth,cols="h,>m",frame=none]
+|===
+| Minimum Value
+| 0
+
+| Maximum Value
+| 100
 
 |===
-| Property | Value
 
-| Type | grade
+==== `grade`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| grade
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
+
 |===
 
 
-=== grade
+=== `grade`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| A \| B \| C \| D \| E
+
+| Exported
+| ✅ Yes
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
 
 |===
-| Property | Value
 
-| Type | A \| B \| C \| D \| E
-| Exported | Yes
-| Secure | No
+=== `resourceType`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| object
+
+| Exported
+| ❌ No
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
+
 |===
 
-=== resourceType
+*Object Definition*
+
+==== `id`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| string
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
 
 |===
-| Property | Value
 
-| Type | object
-| Exported | No
-| Secure | No
+==== `name`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| string
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
+
 |===
 
-==== Object properties
+==== `resourceGroup`
 
-===== id
-
+.Properties
+[%autowidth,cols="h,1",frame=none]
 |===
-| Property | Value
+| Type
+m| string
 
-| Type | string
-|===
+| Nullable
+| ❌ No
 
-===== name
+| Secure
+| ❌ No
 
-|===
-| Property | Value
-
-| Type | string
-|===
-
-===== resourceGroup
-
-|===
-| Property | Value
-
-| Type | string
 |===
 
 
 == Functions
 
-=== generateName
+=== `generateName`
 
 Generate Name Function
 
+.Properties
+[%autowidth,cols="h,1",frame=none]
 |===
-| Property | Value
+| Return Type
+m| string
 
-| Return Type | string
-| Exported | Yes
-|===
+| Exported
+| ✅ Yes
 
-==== Parameters
-
-|===
-| Parameter | Type | Optional
-
-| argument1 | string | No
-| argument2 | int | Yes
 |===
 
-==== Metadata
+.Parameters
+[%autowidth,cols="h,m,1",frame=none]
+|===
+| Name
+| Type
+| Required
+
+| argument1
+| string
+| ✅ Yes
+
+| argument2
+| int
+| ❌ No
 
 |===
-| Key | Value
 
-| description | Generate Name Function
+.Definition
+[source]
+----
+toLower('${argument1}-${argument2}')
+----
+
+=== `somethingElse`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Return Type
+m| bool
+
+| Exported
+| ❌ No
+
 |===
 
-=== somethingElse
-
-|===
-| Property | Value
-
-| Return Type | bool
-| Exported | No
-|===
+.Definition
+[source]
+----
+true
+----
 
 == Parameters
 
-=== requiredParam
+=== `requiredParam`
 
 This is a required parameter
 
+.Properties
+[%autowidth,cols="h,1",frame=none]
 |===
-| Property | Value
+| Type
+m| string
 
-| Type | string
-| Minimum Length | 3
-| Maximum Length | 10
+| Nullable
+| ❌ No
+
+| Secure
+| ✅ Yes
+
+| Sealed
+| ❌ No
+
 |===
 
-=== optionalParam
+.Constraints
+[%autowidth,cols="h,>m",frame=none]
+|===
+| Minimum Length
+| 3
+
+| Maximum Length
+| 10
+
+|===
+
+=== `optionalParam`
 
 This is an optional parameter
 
+.Properties
+[%autowidth,cols="h,1",frame=none]
 |===
-| Property | Value
+| Type
+m| string
 
-| Type | string
-| Nullable | Yes
+| Nullable
+| ✅ Yes
+
+| Secure
+| ❌ No
+
+| Sealed
+| ❌ No
+
 |===
 
-=== simpleParamWithDefault
+=== `simpleParamWithDefault`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| int
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
+
+| Sealed
+| ❌ No
 
 |===
-| Property | Value
 
-| Type | int
-| Default Value | 100
-| Minimum Value | 0
-| Maximum Value | 100
+.Constraints
+[%autowidth,cols="h,>m",frame=none]
+|===
+| Minimum Value
+| 0
+
+| Maximum Value
+| 100
+
 |===
 
-=== genericObject
+.Default Value
+[source]
+----
+100
+----
+
+=== `genericObject`
 
 I have a description in metadata
 
+.Metadata
+[%autowidth,cols="h,1",frame=none]
 |===
-| Property | Value
-
-| Type | object
-| Default Value | { name: value, number: 1000 }
-|===
-
-==== Metadata
-
-|===
-| Key | Value
-
-| name | A name in metadata
-| somethingElse | Another metadata property
+| name
+| A name in metadata
+| somethingElse
+| Another metadata property
 |===
 
-=== inlineSpecificObject
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| object
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
+
+| Sealed
+| ❌ No
 
 |===
-| Property | Value
 
-| Type | object
+.Default Value
+[source]
+----
+{ name: value, number: 1000 }
+----
+
+=== `inlineSpecificObject`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| object
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
+
+| Sealed
+| ✅ Yes
+
 |===
 
-=== typedObjects
+*Object Definition*
+
+==== `property`
+
+Description of the property
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| string
+
+| Nullable
+| ❌ No
+
+| Secure
+| ✅ Yes
 
 |===
-| Property | Value
 
-| Type | customObject[]
+.Constraints
+[%autowidth,cols="h,>m",frame=none]
+|===
+| Maximum Length
+| 10
+
 |===
 
-=== individualOptions
+==== `otionalProperty`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| int
+
+| Nullable
+| ✅ Yes
+
+| Secure
+| ❌ No
 
 |===
-| Property | Value
 
-| Type | one \| two \| three
+.Constraints
+[%autowidth,cols="h,>m",frame=none]
+|===
+| Minimum Value
+| 23
+
 |===
 
-=== greekLetter
+==== `objectProperty`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| object
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
 
 |===
-| Property | Value
 
-| Type | string
-| Default Value | alpha
-| Allowed Values | alpha, beta, gamma, delta
+*Object Definition*
+
+===== `key1`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| string
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
+
 |===
 
-=== multiLine
+===== `key2`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| int
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
 
 |===
-| Property | Value
 
-| Type | string
-| Default Value |  +
-This is a multi line string. +
-  It covers multiple lines, and has indentation. +
-  It also has a tab character ( ).	And a new line. +
-  It also has a double backslash \\ and a single \ +
-  And a single quote: ' +
+
+
+=== `typedObjects`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| customObject[]
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
+
+| Sealed
+| ❌ No
 
 |===
+
+=== `individualOptions`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| one \| two \| three
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
+
+| Sealed
+| ❌ No
+
+|===
+
+=== `greekLetter`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| string
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
+
+| Sealed
+| ❌ No
+
+|===
+
+.Constraints
+[%autowidth,cols="h,>m",frame=none]
+|===
+| Allowed Values
+<| `alpha` +
+   `beta` +
+   `gamma` +
+   `delta`
+
+|===
+
+.Default Value
+[source]
+----
+alpha
+----
+
+=== `multiLine`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| string
+
+| Nullable
+| ❌ No
+
+| Secure
+| ❌ No
+
+| Sealed
+| ❌ No
+
+|===
+
+.Default Value
+[source]
+----
+
+This is a multi line string.
+  It covers multiple lines, and has indentation.
+  It also has a tab character (	).	And a new line.
+  It also has a double backslash \\ and a single \
+  And a single quote: '
+
+----
 
 == Variables
 
-=== nameVar
+=== `nameVar`
 
 Variable description
 
+.Properties
+[%autowidth,cols="h,1",frame=none]
 |===
-| Property | Value
+| Exported
+| ❌ No
 
-| Value | someValue
-| Exported | No
 |===
 
-=== exportedVar
+.Value
+[source]
+----
+someValue
+----
+
+=== `exportedVar`
 
 Exported variable description
 
+.Properties
+[%autowidth,cols="h,1",frame=none]
 |===
-| Property | Value
+| Exported
+| ✅ Yes
 
-| Value | exportedValue
-| Exported | Yes
 |===
 
-=== boolVar
+.Value
+[source]
+----
+exportedValue
+----
+
+=== `boolVar`
 
 Boolean variable
 
+.Properties
+[%autowidth,cols="h,1",frame=none]
 |===
-| Property | Value
+| Exported
+| ✅ Yes
 
-| Value | true
-| Exported | Yes
 |===
 
-=== numVar
+.Value
+[source]
+----
+true
+----
+
+=== `numVar`
 
 The answer to life, the universe, and everything
 
+.Properties
+[%autowidth,cols="h,1",frame=none]
 |===
-| Property | Value
+| Exported
+| ❌ No
 
-| Value | 42
-| Exported | No
 |===
+
+.Value
+[source]
+----
+42
+----
 
 == Resources
 
-=== storageAccount
+=== `storageAccount`
+
+.Properties
+[%autowidth,cols="h,m",frame=none]
+|===
+| Name
+| mystorageaccount
+
+| Type
+| Microsoft.Storage/storageAccounts
+
+| API Version
+| 2023-04-01
+
+| Existing
+d| ✅ Yes
 
 |===
-| Property | Value
 
-| Type | Microsoft.Storage/storageAccounts
-| API Version | 2023-04-01
-| Existing | Yes
+=== `storageAccount::blobServices`
+
+.Properties
+[%autowidth,cols="h,m",frame=none]
+|===
+| Name
+| default
+
+| Type
+| Microsoft.Storage/storageAccounts/blobServices
+
+| API Version
+| 2023-04-01
+
+| Existing
+d| ✅ Yes
+
 |===
 
-=== storageAccount::blobServices
+=== `storageAccount::blobServices::container`
+
+.Properties
+[%autowidth,cols="h,m",frame=none]
+|===
+| Name
+| myContainer
+
+| Type
+| Microsoft.Storage/storageAccounts/blobServices/containers
+
+| API Version
+| 2023-04-01
 
 |===
-| Property | Value
 
-| Type | Microsoft.Storage/storageAccounts/blobServices
-| API Version | 2023-04-01
-| Existing | Yes
+=== `vnet`
+
+.Properties
+[%autowidth,cols="h,m",frame=none]
+|===
+| Name
+| ${nameVar}
+
+| Type
+| Microsoft.Network/virtualNetworks
+
+| API Version
+| 2021-05-01
+
+| Depends On
+| roleAssignStorage
+
 |===
 
-=== storageAccount::blobServices::container
+=== `vnet::defaultSubnet`
+
+.Properties
+[%autowidth,cols="h,m",frame=none]
+|===
+| Name
+| default
+
+| Type
+| Microsoft.Network/virtualNetworks/subnets
+
+| API Version
+| 2021-05-01
 
 |===
-| Property | Value
 
-| Type | Microsoft.Storage/storageAccounts/blobServices/containers
-| API Version | 2023-04-01
+=== `vnet::diffApi`
+
+.Properties
+[%autowidth,cols="h,m",frame=none]
+|===
+| Name
+| api
+
+| Type
+| Microsoft.Network/virtualNetworks/subnets
+
+| API Version
+| 2024-05-01
+
 |===
 
-=== vnet
-
-|===
-| Property | Value
-
-| Type | Microsoft.Network/virtualNetworks
-| API Version | 2021-05-01
-| Depends On | roleAssignStorage
-|===
-
-=== vnet::defaultSubnet
-
-|===
-| Property | Value
-
-| Type | Microsoft.Network/virtualNetworks/subnets
-| API Version | 2021-05-01
-|===
-
-=== vnet::diffApi
-
-|===
-| Property | Value
-
-| Type | Microsoft.Network/virtualNetworks/subnets
-| API Version | 2024-05-01
-|===
-
-=== externalChild
+=== `externalChild`
 
 Resource Description
 
+.Properties
+[%autowidth,cols="h,m",frame=none]
 |===
-| Property | Value
+| Name
+| another
 
-| Type | Microsoft.Network/virtualNetworks/subnets
-| API Version | 2023-11-01
-| Parent | vnet
-| Condition | (1 == 1)
-|===
+| Type
+| Microsoft.Network/virtualNetworks/subnets
 
-=== containerLoop
+| API Version
+| 2023-11-01
 
-|===
-| Property | Value
+| Parent
+| vnet
 
-| Type | Microsoft.Storage/storageAccounts/blobServices/containers
-| API Version | 2024-01-01
-| Parent | storageAccount::blobServices
-| Loop | for name in ['alice', 'bob', 'charlie']
-| Batch Size | 2
 |===
 
-=== roleAssignStorage
+.Condition
+[source]
+----
+(1 == 1)
+----
+
+=== `containerLoop`
+
+.Properties
+[%autowidth,cols="h,m",frame=none]
+|===
+| Name
+| container${name}
+
+| Type
+| Microsoft.Storage/storageAccounts/blobServices/containers
+
+| API Version
+| 2024-01-01
+
+| Parent
+| storageAccount::blobServices
+
+| Batch Size
+| 2
 
 |===
-| Property | Value
 
-| Type | Microsoft.Authorization/roleAssignments
-| API Version | 2022-04-01
-| Scope | ${storageAccount}
+.Loop
+[source]
+----
+for name in ['alice', 'bob', 'charlie']
+----
+
+=== `roleAssignStorage`
+
+.Properties
+[%autowidth,cols="h,m",frame=none]
+|===
+| Name
+| guid(storageAccount.name)
+
+| Type
+| Microsoft.Authorization/roleAssignments
+
+| API Version
+| 2022-04-01
+
+| Scope
+| ${storageAccount}
+
 |===
 
 == Modules
@@ -398,46 +873,115 @@ _No modules defined_
 
 == Outputs
 
-=== one
+=== `one`
 
 Output Description
 
+.Properties
+[%autowidth,cols="h,1",frame=none]
 |===
-| Property | Value
+| Type
+m| string
 
-| Type | string
-| Value | one
-| Secure | Yes
-|===
+| Exported
+| ❌ No
 
-=== storageAccountOutput
+| Secure
+| ✅ Yes
 
-|===
-| Property | Value
-
-| Type | resourceType
-| Value | { id: storageAccount.id, name: storageAccount.name, resourceGroup: resourceGroup().name }
 |===
 
-=== percentage
+.Value
+[source]
+----
+one
+----
+
+=== `storageAccountOutput`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| resourceType
+
+| Exported
+| ❌ No
+
+| Secure
+| ❌ No
 
 |===
-| Property | Value
 
-| Type | int
-| Value | true ? 50 : 100
-| Minimum Value | 0
-| Maximum Value | 100
+.Value
+[source]
+----
+{ id: storageAccount.id, name: storageAccount.name, resourceGroup: resourceGroup().name }
+----
+
+=== `percentage`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
+|===
+| Type
+m| int
+
+| Exported
+| ❌ No
+
+| Secure
+| ❌ No
+
 |===
 
-=== fib
+.Constraints
+[%autowidth,cols="h,>m",frame=none]
+|===
+| Minimum Value
+| 0
+
+| Maximum Value
+| 100
 
 |===
-| Property | Value
 
-| Type | string[]
-| Value | [1, 1, 2, 3, 5, 8]
-| Minimum Length | 1
-| Maximum Length | 34
+.Value
+[source]
+----
+true ? 50 : 100
+----
+
+=== `fib`
+
+.Properties
+[%autowidth,cols="h,1",frame=none]
 |===
+| Type
+m| string[]
+
+| Exported
+| ❌ No
+
+| Secure
+| ❌ No
+
+|===
+
+.Constraints
+[%autowidth,cols="h,>m",frame=none]
+|===
+| Minimum Length
+| 1
+
+| Maximum Length
+| 34
+
+|===
+
+.Value
+[source]
+----
+[1, 1, 2, 3, 5, 8]
+----
 
